# tech-assessment

./: .gitignore  AssessmentNotes.md  README.md
csharp/: README.md  Technical.Assessment.sln
csharp/.devcontainer/: Dockerfile  devcontainer.json
csharp/Exercise1/: CodeToReview.txt
csharp/Exercise2/: CodeToRefactor.cs
csharp/Exercise2.Tests/: BirthingUnitTests.cs  Exercise2.Tests.csproj  PeopleTests.cs  UnitTest1.cs
csharp/Exercise3/: CleanGreenFieldsProject.sln
java/: README.md
java/.devcontainer/: Dockerfile  devcontainer.json
java/Exercise1/: CodeToReview.txt
java/Exercise2/: pom.xml
javascript/: README.md
javascript/.devcontainer/: Dockerfile  devcontainer.json
javascript/Exercise1/: CodeToReview.txt
javascript/Exercise2/: package.json
python/: README.md  technical-assessment.toml
python/.devcontainer/: Dockerfile  devcontainer.json
python/Exercise1/: CodeToReview.txt
python/Exercise2/: pyproject.toml
ruby/: Assessment.md  README.md
ruby/.devcontainer/: Dockerfile  devcontainer.json
ruby/Exercise2/: CodeToRefactor.rb  Gemfile  Rakefile
typescript/: Marking.md  README.md
typescript/.devcontainer/: Dockerfile  devcontainer.json
typescript/Exercise2/: CodeToRefactor.ts  jest.config.js  package.json  tsconfig.json
